--- a/pages/uy.html
+++ b/pages/uy.html
@@ -65,8 +65,39 @@
                     <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/fi71A916ju8?si=3mJovcC3ls5xHhOT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>    
-                </div>                            
+                </div> 
+                <div class="cards_sobrelasclases">
+                    <div>
+                        <img src="../images/ic_circulos.png" class="background-circles" alt="Circulos" />
+                        <h4>Clases <br> personalizadas</h4>
+                        <hr>
+                        <p>Adaptamos cada lección a tu nivel y ritmo de aprendizaje.</p>
+                    </div>
+                    <div>
+                        <img src="../images/ic_circulos.png" class="background-circles" alt="Circulos" />
+                        <h4>Preparación <br> de Exámenes</h4>
+                        <hr>
+                        <p>Te ayudamos a estar listo para tus parciales y finales con estrategias y práctica intensiva.</p>
+                    </div>
+                    <div>
+                        <img src="../images/ic_circulos.png" class="background-circles" alt="Circulos" />
+                        <h4>Acompañamiento <br>Continuo</h4>
+                        <hr>
+                        <p>Te guiamos durante todo el año lectivo, asegurándonos de que                      comprendas cada tema.</p>
+                    </div>
+                </div>                           
             </div>          
+        </section>
+        <section id="materias">
+            <div>
+                <h3>Materias</h3>
+                <p>Contamos con profes especializados en el dictado de:</p>
+                <ul class="custom-list">
+                    <li><span>Matemática de Liceo:</span> de 1ro a 6to</li>
+                    <li><span>Matemáticas Universitarias:</span> Álgebra lineal, Cálculo, Lógica, Matemática Discreta, Análisis matemático, Probabilidad, Estadística, Ecuaciones Diferenciales</li>
+                </ul>
+            </div>
+            <div class="imagen_clases"></div>
         </section>
     </main>
     
