Agregado sección testimonios + responsive

--- a/pages/uy.html
+++ b/pages/uy.html
@@ -81,7 +81,7 @@
                     </div>
                     <div>
                         <img src="../images/ic_circulos.png" class="background-circles" alt="Circulos" />
-                        <h4>Acompañamiento <br>Continuo</h4>
+                        <h4>Acompañamiento <br> Continuo</h4>
                         <hr>
                         <p>Te guiamos durante todo el año lectivo, asegurándonos de que                      comprendas cada tema.</p>
                     </div>
@@ -98,6 +98,74 @@
                 </ul>
             </div>
             <div class="imagen_clases"></div>
+        </section>
+        <section id="testimonios"> 
+            <div>
+                <h3> <span>Testimonios</span> <br> Experiencias de nuestros estudiantes </h3>
+                <div class="cards_testimonios">
+                    <div>
+                        <img src="../images/ic_comillas.png" class="background-comillas" alt="Comillas" />
+                        <p>Mariana es una excelente profesora: Organizada, responsable, paciente y explica topicos complejos en forma clara y sencilla...  </p>
+                        <p class="testimonios_nombre"> Oscar</p>                       
+                    </div>
+                    <div>
+                        <img src="../images/ic_comillas.png" class="background-comillas" alt="Comillas" />
+                        <p>Mi experiencia es muy buena ya que te explica en una forma fácil de comprender y hace resúmenes los cuales me ayudan a estudiar...</p>
+                        <p class="testimonios_nombre"> Delfina</p>
+                    </div>
+                    <div>
+                        <img src="../images/ic_comillas.png" class="background-comillas" alt="Comillas" />
+                        <p>Excelentes explicaciones, muy buena onda y lo mas importante consegui aprobar de forma satisfactoria, altamente recomendable</p>
+                        <p class="testimonios_nombre"> Francesco</p>                        
+                    </div>
+                </div>
+                <div>
+                    <a href="https://www.tusclases.com.uy/profesores/mariana-servan/opiniones" target="_blank" class="botones">Ver más testimonios</a>
+                </div>
+            </div>                 
+        </section>
+        <section id="precios">            
+            <div class="imagen_precio"></div>
+            <div class="container_precios">
+                <h3>Precios y paquetes</h3>
+            </div>
+            <!-- <div>
+                
+                <div class="cards_precios">
+                    <div>
+                        <img src="../images/ic_peso.png" class="background-peso" alt="Peso" />
+                        <h4>Clases <br> individuales</h4>
+                        <hr>
+                        <div>
+                            <p>1 hora</p>
+                            <p>$740</p>
+                        </div>
+                        <div>
+                            <p>1.5 hora</p>
+                            <p>$1100</p>
+                        </div>
+                        <div>
+                            <p>2 horas</p>
+                            <p>$1450</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="../images/ic_peso.png" class="background-peso" alt="Peso" />
+                        <h4> Pack 5 horas </h4>
+                        <hr>
+                        <p>5 horas para ser usadas en diferentes clases</p>
+                        <p>$720 c/h <br> Total $3600</p>
+                    </div>
+                    <div>
+                        <img src="../images/ic_peso.png" class="background-peso" alt="Peso" />
+                        <h4>Pack 10 horas</h4>
+                        <hr>
+                        <p>10 horas para ser usadas en diferentes clases</p>
+                        <p>$710 c/h <br> Total $7100</p>
+                    </div>
+                </div>
+                <p>* Pago mediante transferencia</p>
+            </div> -->
         </section>
     </main>
     
