--- a/index.html
+++ b/index.html
@@ -3,6 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L74FM9W7WD">
+    </script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-L74FM9W7WD');
+    </script>
+    <!-- Hotjar Tracking Code for https://www.profemateonline.com/ -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:5193578,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+    <!-- Fin tags -->
+    <meta name="description" content="Clases particulares de matemáticas online para estudiantes de toda habla hispana. Aprende cálculo, álgebra, estadística, probabilidad y lógica matemática desde cualquier lugar, con un enfoque personalizado y adaptado a distintos niveles. ">
+    <meta name="keywords" content="clases de matemáticas online, tutor de matemáticas para hispanohablantes, clases particulares de matemáticas, clases de álgebra y cálculo, refuerzo en estadística y probabilidad, tutoría de lógica matemática, clases online de matemáticas">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <title>Profe Mate Online</title>
