agregado de nuevas materias

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="description" content="Clases particulares de matemáticas online para estudiantes de toda habla hispana. Aprende cálculo, álgebra, estadística, probabilidad y lógica matemática desde cualquier lugar, con un enfoque personalizado y adaptado a distintos niveles. ">
     <meta name="keywords" content="clases de matemáticas online, tutor de matemáticas para hispanohablantes, clases particulares de matemáticas, clases de álgebra y cálculo, refuerzo en estadística y probabilidad, tutoría de lógica matemática, clases online de matemáticas">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css?v=1.1">
     <title>Profe Mate Online</title>
 </head>
 <body>
