--- a/pages/esp.html
+++ b/pages/esp.html
@@ -29,7 +29,7 @@
     ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css?v=1.1">
     <title>Profe Mate Online</title>
 </head>
 <body>
@@ -119,8 +119,8 @@
                 <h3>Materias</h3>
                 <p>Contamos con profes especializados en el dictado de:</p>
                 <ul class="custom-list">
-                    <li><span>Matemática de Secundaria:</span> ESO y Bachillerato</li>
-                    <li><span>Matemáticas Universitarias:</span> Álgebra lineal, Cálculo, Lógica, Matemática Discreta, Análisis matemático, Probabilidad, Estadística, Ecuaciones Diferenciales</li>
+                    <li><span>ESO y Bachillerato:</span> Matemáticas, Física, Química y Físico-Química</li>
+                    <li><span>Universidad:</span> Álgebra lineal, Cálculo, Lógica, Matemática Discreta, Análisis matemático, Probabilidad, Estadística, Ecuaciones Diferenciales</li>
                 </ul>
             </div>
             <div class="imagen_clases"></div>
